--- a/MultiVariate_Regression.ipynb
+++ b/MultiVariate_Regression.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "MultiVariate Regression.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNtIL0eVHMMP1m8xfjvama4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Maky98/ML-Notebooks/blob/main/MultiVariate_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TvJyU17KXfn8"
@@ -25,7 +37,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -36,7 +48,7 @@
       "source": [
         "dataset =  pd.read_csv(\"petrol_consumption.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +64,7 @@
       "source": [
         "dataset"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +556,7 @@
         "X = dataset[['Petrol_tax','Average_income','Paved_Highways','Population_Driver_licence(%)']]\n",
         "y = dataset['Petrol_Consumption']\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +572,7 @@
       "source": [
         "X"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +1009,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1014,7 +1026,7 @@
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train, y_train)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1040,7 +1052,7 @@
       "source": [
         "print(regressor.intercept_)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1075,7 @@
       "source": [
         "print(regressor.coef_)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1088,7 +1100,7 @@
         "coeff_df = pd.DataFrame(regressor.coef_, X.columns, columns = [\"Coefficient\"])\n",
         "coeff_df"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1161,7 +1173,7 @@
       "source": [
         "X.columns"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1185,7 +1197,7 @@
       "source": [
         "y_pred = regressor.predict(X_test)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1200,7 +1212,7 @@
       "source": [
         "y_pred"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1221,114 +1233,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 355
+          "height": 185
         },
         "id": "wzBjvIrBdDkl",
-        "outputId": "b4e1e8bb-f2c9-4570-e1e0-f5508899d7d3"
+        "outputId": "0503fc65-b5a0-4289-9890-f3a0956e7897"
       },
       "source": [
         "df = pd.DataFrame({\"Actual\":y_test , \"Prediction\":y_pred})\n",
         "df"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Actual</th>\n",
-              "      <th>Prediction</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>29</th>\n",
-              "      <td>534</td>\n",
-              "      <td>469.391989</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>410</td>\n",
-              "      <td>545.645464</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>577</td>\n",
-              "      <td>589.668394</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>30</th>\n",
-              "      <td>571</td>\n",
-              "      <td>569.730413</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32</th>\n",
-              "      <td>577</td>\n",
-              "      <td>649.774809</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>37</th>\n",
-              "      <td>704</td>\n",
-              "      <td>646.631164</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>34</th>\n",
-              "      <td>487</td>\n",
-              "      <td>511.608148</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>40</th>\n",
-              "      <td>587</td>\n",
-              "      <td>672.475177</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>467</td>\n",
-              "      <td>502.074782</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>580</td>\n",
-              "      <td>501.270734</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "    Actual  Prediction\n",
-              "29     534  469.391989\n",
-              "4      410  545.645464\n",
-              "26     577  589.668394\n",
-              "30     571  569.730413\n",
-              "32     577  649.774809\n",
-              "37     704  646.631164\n",
-              "34     487  511.608148\n",
-              "40     587  672.475177\n",
-              "7      467  502.074782\n",
-              "10     580  501.270734"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-6f5e2e3dd1f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"Actual\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"Prediction\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+          ]
         }
       ]
     },
@@ -1345,7 +1270,7 @@
       "source": [
         "df.plot()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1379,7 +1304,7 @@
       "source": [
         "from sklearn import metrics"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1395,7 +1320,7 @@
         "print(\"Mean Absolute Error:\",metrics.mean_absolute_error(y_test, y_pred))\n",
         "print(\"Mean Sqaured Error:\",metrics.mean_squared_error(y_test,y_pred))\n"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1415,7 +1340,7 @@
       "source": [
         "import seaborn as sns"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1431,7 +1356,7 @@
       "source": [
         "sns.regplot(x = y_test, y = y_pred, ci = None)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1468,9 +1393,9 @@
         "outputId": "1a218f85-677a-4462-d4f1-e623ad5197a9"
       },
       "source": [
-        "sns.pairplot(dataset,hue = \"Petrol_Consumption\")"
+        "sns.pairplot(dataset,hue = \"Petrol_Consumption\")  "
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
